--- a/win/VC100/game.vcxproj
+++ b/win/VC100/game.vcxproj
@@ -332,7 +332,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\game\AccountMgr.cpp" />
-    <ClCompile Include="..\..\src\game\AchievementMgr.cpp" />
+    <ClCompile Include="..\..\src\game\AddonHandler.cpp" />
     <ClCompile Include="..\..\src\game\AggressorAI.cpp" />
     <ClCompile Include="..\..\src\game\ahbot\AhBot.cpp" />
     <ClCompile Include="..\..\src\game\ahbot\AhBotConfig.cpp" />
@@ -341,30 +341,16 @@
     <ClCompile Include="..\..\src\game\ahbot\ItemBag.cpp" />
     <ClCompile Include="..\..\src\game\ahbot\PricingStrategy.cpp" />
     <ClCompile Include="..\..\src\game\ahbot\TradeCategory.cpp" />
-    <ClCompile Include="..\..\src\game\ArenaTeam.cpp" />
-    <ClCompile Include="..\..\src\game\ArenaTeamHandler.cpp" />
     <ClCompile Include="..\..\src\game\AuctionHouseBot\AuctionHouseBot.cpp" />
     <ClCompile Include="..\..\src\game\AuctionHouseHandler.cpp" />
     <ClCompile Include="..\..\src\game\AuctionHouseMgr.cpp" />
     <ClCompile Include="..\..\src\game\Bag.cpp" />
     <ClCompile Include="..\..\src\game\BattleGround\BattleGround.cpp" />
-    <ClCompile Include="..\..\src\game\BattleGround\BattleGroundAA.cpp" />
     <ClCompile Include="..\..\src\game\BattleGround\BattleGroundAB.cpp" />
-    <ClCompile Include="..\..\src\game\BattleGround\BattleGroundRB.cpp" />
     <ClCompile Include="..\..\src\game\BattleGround\BattleGroundAV.cpp" />
-    <ClCompile Include="..\..\src\game\BattleGround\BattleGroundBE.cpp" />
-    <ClCompile Include="..\..\src\game\BattleGround\BattleGroundDS.cpp" />
-    <ClCompile Include="..\..\src\game\BattleGround\BattleGroundEY.cpp" />
     <ClCompile Include="..\..\src\game\BattleGround\BattleGroundHandler.cpp" />
-    <ClCompile Include="..\..\src\game\BattleGround\BattleGroundIC.cpp" />
     <ClCompile Include="..\..\src\game\BattleGround\BattleGroundMgr.cpp" />
-    <ClCompile Include="..\..\src\game\BattleGround\BattleGroundNA.cpp" />
-    <ClCompile Include="..\..\src\game\BattleGround\BattleGroundRL.cpp" />
-    <ClCompile Include="..\..\src\game\BattleGround\BattleGroundRV.cpp" />
-    <ClCompile Include="..\..\src\game\BattleGround\BattleGroundSA.cpp" />
     <ClCompile Include="..\..\src\game\BattleGround\BattleGroundWS.cpp" />
-    <ClCompile Include="..\..\src\game\Calendar.cpp" />
-    <ClCompile Include="..\..\src\game\CalendarHandler.cpp" />
     <ClCompile Include="..\..\src\game\Camera.cpp" />
     <ClCompile Include="..\..\src\game\Channel.cpp" />
     <ClCompile Include="..\..\src\game\ChannelHandler.cpp" />
@@ -387,6 +373,8 @@
     <ClCompile Include="..\..\src\game\debugcmds.cpp" />
     <ClCompile Include="..\..\src\game\DuelHandler.cpp" />
     <ClCompile Include="..\..\src\game\DynamicObject.cpp" />
+    <ClCompile Include="..\..\src\game\extras\Mod.cpp" />
+    <ClCompile Include="..\..\src\game\extras\SpellMod.cpp" />
     <ClCompile Include="..\..\src\game\FleeingMovementGenerator.cpp" />
     <ClCompile Include="..\..\src\game\FollowerReference.cpp" />
     <ClCompile Include="..\..\src\game\GameEventMgr.cpp" />
@@ -415,7 +403,6 @@
     <ClCompile Include="..\..\src\game\Level1.cpp" />
     <ClCompile Include="..\..\src\game\Level2.cpp" />
     <ClCompile Include="..\..\src\game\Level3.cpp" />
-    <ClCompile Include="..\..\src\game\LFGHandler.cpp" />
     <ClCompile Include="..\..\src\game\LootHandler.cpp" />
     <ClCompile Include="..\..\src\game\LootMgr.cpp" />
     <ClCompile Include="..\..\src\game\Mail.cpp" />
@@ -710,14 +697,11 @@
     <ClCompile Include="..\..\src\game\ReactorAI.cpp" />
     <ClCompile Include="..\..\src\game\ReputationMgr.cpp" />
     <ClCompile Include="..\..\src\game\ScriptMgr.cpp" />
-    <ClCompile Include="..\..\src\game\SkillDiscovery.cpp" />
-    <ClCompile Include="..\..\src\game\SkillExtraItems.cpp" />
     <ClCompile Include="..\..\src\game\SkillHandler.cpp" />
     <ClCompile Include="..\..\src\game\SocialMgr.cpp" />
     <ClCompile Include="..\..\src\game\Spell.cpp" />
     <ClCompile Include="..\..\src\game\SpellAuras.cpp" />
     <ClCompile Include="..\..\src\game\SQLStorages.cpp" />
-    <ClCompile Include="..\..\src\game\TransportSystem.cpp" />
     <ClCompile Include="..\..\src\game\UnitAuraProcHandler.cpp" />
     <ClCompile Include="..\..\src\game\SpellEffects.cpp" />
     <ClCompile Include="..\..\src\game\SpellHandler.cpp" />
@@ -733,22 +717,14 @@
     <ClCompile Include="..\..\src\game\Transports.cpp" />
     <ClCompile Include="..\..\src\game\Unit.cpp" />
     <ClCompile Include="..\..\src\game\UpdateData.cpp" />
-    <ClCompile Include="..\..\src\game\Vehicle.cpp" />
-    <ClCompile Include="..\..\src\game\VehicleHandler.cpp" />
-    <ClCompile Include="..\..\src\game\VoiceChatHandler.cpp" />
     <ClCompile Include="..\..\src\game\WaypointManager.cpp" />
     <ClCompile Include="..\..\src\game\WaypointMovementGenerator.cpp" />
     <ClCompile Include="..\..\src\game\Weather.cpp" />
     <ClCompile Include="..\..\src\game\World.cpp" />
     <ClCompile Include="..\..\src\game\OutdoorPvP\OutdoorPvP.cpp" />
     <ClCompile Include="..\..\src\game\OutdoorPvP\OutdoorPvPEP.cpp" />
-    <ClCompile Include="..\..\src\game\OutdoorPvP\OutdoorPvPGH.cpp" />
-    <ClCompile Include="..\..\src\game\OutdoorPvP\OutdoorPvPHP.cpp" />
     <ClCompile Include="..\..\src\game\OutdoorPvP\OutdoorPvPMgr.cpp" />
-    <ClCompile Include="..\..\src\game\OutdoorPvP\OutdoorPvPNA.cpp" />
     <ClCompile Include="..\..\src\game\OutdoorPvP\OutdoorPvPSI.cpp" />
-    <ClCompile Include="..\..\src\game\OutdoorPvP\OutdoorPvPTF.cpp" />
-    <ClCompile Include="..\..\src\game\OutdoorPvP\OutdoorPvPZM.cpp" />
     <ClCompile Include="..\..\src\game\WorldSession.cpp" />
     <ClCompile Include="..\..\src\game\WorldSocket.cpp" />
     <ClCompile Include="..\..\src\game\WorldSocketMgr.cpp" />
@@ -764,7 +740,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\game\AccountMgr.h" />
-    <ClInclude Include="..\..\src\game\AchievementMgr.h" />
+    <ClInclude Include="..\..\src\game\AddonHandler.h" />
     <ClInclude Include="..\..\src\game\AggressorAI.h" />
     <ClInclude Include="..\..\src\game\ahbot\AhBot.h" />
     <ClInclude Include="..\..\src\game\ahbot\AhBotConfig.h" />
@@ -773,26 +749,14 @@
     <ClInclude Include="..\..\src\game\ahbot\ItemBag.h" />
     <ClInclude Include="..\..\src\game\ahbot\PricingStrategy.h" />
     <ClInclude Include="..\..\src\game\ahbot\TradeCategory.h" />
-    <ClInclude Include="..\..\src\game\ArenaTeam.h" />
     <ClInclude Include="..\..\src\game\AuctionHouseBot\AuctionHouseBot.h" />
     <ClInclude Include="..\..\src\game\AuctionHouseMgr.h" />
     <ClInclude Include="..\..\src\game\Bag.h" />
     <ClInclude Include="..\..\src\game\BattleGround\BattleGround.h" />
-    <ClInclude Include="..\..\src\game\BattleGround\BattleGroundAA.h" />
     <ClInclude Include="..\..\src\game\BattleGround\BattleGroundAB.h" />
-    <ClInclude Include="..\..\src\game\BattleGround\BattleGroundRB.h" />
     <ClInclude Include="..\..\src\game\BattleGround\BattleGroundAV.h" />
-    <ClInclude Include="..\..\src\game\BattleGround\BattleGroundBE.h" />
-    <ClInclude Include="..\..\src\game\BattleGround\BattleGroundDS.h" />
-    <ClInclude Include="..\..\src\game\BattleGround\BattleGroundEY.h" />
-    <ClInclude Include="..\..\src\game\BattleGround\BattleGroundIC.h" />
     <ClInclude Include="..\..\src\game\BattleGround\BattleGroundMgr.h" />
-    <ClInclude Include="..\..\src\game\BattleGround\BattleGroundNA.h" />
-    <ClInclude Include="..\..\src\game\BattleGround\BattleGroundRL.h" />
-    <ClInclude Include="..\..\src\game\BattleGround\BattleGroundRV.h" />
-    <ClInclude Include="..\..\src\game\BattleGround\BattleGroundSA.h" />
     <ClInclude Include="..\..\src\game\BattleGround\BattleGroundWS.h" />
-    <ClInclude Include="..\..\src\game\Calendar.h" />
     <ClInclude Include="..\..\src\game\Camera.h" />
     <ClInclude Include="..\..\src\game\Cell.h" />
     <ClInclude Include="..\..\src\game\CellImpl.h" />
@@ -815,6 +779,7 @@
     <ClInclude Include="..\..\src\game\DBCStores.h" />
     <ClInclude Include="..\..\src\game\DBCStructure.h" />
     <ClInclude Include="..\..\src\game\DynamicObject.h" />
+    <ClInclude Include="..\..\src\game\extras\Mod.h" />
     <ClInclude Include="..\..\src\game\FleeingMovementGenerator.h" />
     <ClInclude Include="..\..\src\game\FollowerReference.h" />
     <ClInclude Include="..\..\src\game\FollowerRefManager.h" />
@@ -1183,8 +1148,6 @@
     <ClInclude Include="..\..\src\game\ReputationMgr.h" />
     <ClInclude Include="..\..\src\game\ScriptMgr.h" />
     <ClInclude Include="..\..\src\game\SharedDefines.h" />
-    <ClInclude Include="..\..\src\game\SkillDiscovery.h" />
-    <ClInclude Include="..\..\src\game\SkillExtraItems.h" />
     <ClInclude Include="..\..\src\game\SocialMgr.h" />
     <ClInclude Include="..\..\src\game\Spell.h" />
     <ClInclude Include="..\..\src\game\SpellAuraDefines.h" />
@@ -1197,26 +1160,19 @@
     <ClInclude Include="..\..\src\game\Totem.h" />
     <ClInclude Include="..\..\src\game\TotemAI.h" />
     <ClInclude Include="..\..\src\game\Transports.h" />
-    <ClInclude Include="..\..\src\game\TransportSystem.h" />
     <ClInclude Include="..\..\src\game\Unit.h" />
     <ClInclude Include="..\..\src\game\UnitEvents.h" />
     <ClInclude Include="..\..\src\game\UpdateData.h" />
     <ClInclude Include="..\..\src\game\UpdateFields.h" />
     <ClInclude Include="..\..\src\game\UpdateMask.h" />
-    <ClInclude Include="..\..\src\game\Vehicle.h" />
     <ClInclude Include="..\..\src\game\WaypointManager.h" />
     <ClInclude Include="..\..\src\game\WaypointMovementGenerator.h" />
     <ClInclude Include="..\..\src\game\Weather.h" />
     <ClInclude Include="..\..\src\game\World.h" />
     <ClInclude Include="..\..\src\game\OutdoorPvP\OutdoorPvP.h" />
     <ClInclude Include="..\..\src\game\OutdoorPvP\OutdoorPvPEP.h" />
-    <ClInclude Include="..\..\src\game\OutdoorPvP\OutdoorPvPGH.h" />
-    <ClInclude Include="..\..\src\game\OutdoorPvP\OutdoorPvPHP.h" />
     <ClInclude Include="..\..\src\game\OutdoorPvP\OutdoorPvPMgr.h" />
-    <ClInclude Include="..\..\src\game\OutdoorPvP\OutdoorPvPNA.h" />
     <ClInclude Include="..\..\src\game\OutdoorPvP\OutdoorPvPSI.h" />
-    <ClInclude Include="..\..\src\game\OutdoorPvP\OutdoorPvPTF.h" />
-    <ClInclude Include="..\..\src\game\OutdoorPvP\OutdoorPvPZM.h" />
     <ClInclude Include="..\..\src\game\WorldSession.h" />
     <ClInclude Include="..\..\src\game\WorldSocket.h" />
     <ClInclude Include="..\..\src\game\WorldSocketMgr.h" />
